text overflow fixed

--- a/common.blocks/todos/__todo-checkbox/todos__todo-checkbox.css
+++ b/common.blocks/todos/__todo-checkbox/todos__todo-checkbox.css
@@ -7,6 +7,10 @@
 
 .todos__todo-checkbox input[type="checkbox"] + label {
     cursor: pointer;
+    max-width: 300px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .todos__todo-checkbox input[type="checkbox"]:checked + label {
